PROJECT( BlocksRuntime C )

SET( SRCS
 runtime.c
 data.c
 )

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
ADD_LIBRARY( ${PROJECT_NAME} STATIC ${SRCS})
SET_TARGET_PROPERTIES( ${PROJECT_NAME} PROPERTIES
  INSTALL_NAME_DIR ${CMAKE_INSTALL_PREFIX}/lib )

INSTALL( TARGETS ${PROJECT_NAME} DESTINATION lib )
INSTALL( FILES Block.h Block_private.h DESTINATION include )
