set(LLVM_LINK_COMPONENTS support)

add_clang_library(clangAST
  APValue.cpp
  ASTConsumer.cpp
  ASTContext.cpp
  ASTDiagnostic.cpp
  ASTDumper.cpp
  ASTImporter.cpp
  ASTTypeTraits.cpp
  AttrImpl.cpp
  CXXInheritance.cpp
  Comment.cpp
  CommentBriefParser.cpp
  CommentCommandTraits.cpp
  CommentLexer.cpp
  CommentParser.cpp
  CommentSema.cpp
  Decl.cpp
  DeclarationName.cpp
  DeclBase.cpp
  DeclCXX.cpp
  DeclFriend.cpp
  DeclGroup.cpp
  DeclObjC.cpp
  DeclOpenMP.cpp
  DeclPrinter.cpp
  DeclTemplate.cpp
  Expr.cpp
  ExprClassification.cpp
  ExprConstant.cpp
  ExprCXX.cpp
  ExternalASTSource.cpp
  InheritViz.cpp
  ItaniumCXXABI.cpp
  ItaniumMangle.cpp
  Mangle.cpp
  MangleNumberingContext.cpp
  MicrosoftCXXABI.cpp
  MicrosoftMangle.cpp
  NestedNameSpecifier.cpp
  NSAPI.cpp
  ParentMap.cpp
  RawCommentList.cpp
  RecordLayout.cpp
  RecordLayoutBuilder.cpp
  SelectorLocationsKind.cpp
  Stmt.cpp
  StmtIterator.cpp
  StmtPrinter.cpp
  StmtProfile.cpp
  StmtViz.cpp
  TemplateBase.cpp
  TemplateName.cpp
  Type.cpp
  TypeLoc.cpp
  TypePrinter.cpp
  VTableBuilder.cpp
  VTTBuilder.cpp
  # +===== Scout ============================================================+
  # Note: Don't include all source files in the Scout subdir here.
  # Unfortunately, some files can't be separated out and instead are
  # included into the source in this directory.
  #
  Scout/ASTContext.cpp
  Scout/ForallStmt.cpp
  Scout/MeshDecl.cpp
  Scout/MeshType.cpp
  Scout/MeshLayout.cpp
  Scout/RectilinearMeshDecl.cpp
  Scout/RenderallStmt.cpp
  Scout/StructuredMeshDecl.cpp
  Scout/UniformMeshDecl.cpp
  Scout/UnstructuredMeshDecl.cpp
  Scout/VolumeRenderAllStmt.cpp
  Scout/Type.cpp
  # +==========================================================================+
  )

add_dependencies(clangAST
  ClangARMNeon
  ClangAttrClasses
  ClangAttrList
  ClangAttrImpl
  ClangAttrDump
  ClangAttrVisitor
  ClangCommentCommandInfo
  ClangCommentCommandList
  ClangCommentNodes
  ClangCommentHTMLTags
  ClangCommentHTMLTagsProperties
  ClangCommentHTMLNamedCharacterReferences
  ClangDeclNodes
  ClangDiagnosticAST
  ClangDiagnosticComment
  ClangDiagnosticCommon
  ClangDiagnosticSema
  ClangStmtNodes
  )

target_link_libraries(clangAST
  clangBasic
  clangLex
  )
